[gd_scene load_steps=4 format=3 uid="uid://crpw0r23mf14u"]

[ext_resource type="Script" path="res://components/Table/TableItems/CellItem.gd" id="1_omh0o"]

[sub_resource type="ImageTexture" id="ImageTexture_vvvut"]

[sub_resource type="ImageTexture" id="ImageTexture_gm4bw"]

[node name="CellItem" type="PanelContainer"]
custom_minimum_size = Vector2(120, 0)
offset_right = 120.0
script = ExtResource("1_omh0o")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="StringEdit" type="LineEdit" parent="HBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
flat = true

[node name="IntEdit" type="SpinBox" parent="HBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_icons/updown = SubResource("ImageTexture_vvvut")
min_value = -9.22337e+15
max_value = 9.22337e+18
rounded = true

[node name="FloatEdit" type="SpinBox" parent="HBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_icons/updown = SubResource("ImageTexture_gm4bw")
max_value = 9.22337e+18
step = 0.001

[node name="BoolEdit" type="CheckButton" parent="HBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 6

[connection signal="text_submitted" from="HBox/StringEdit" to="." method="_on_string_edit_text_submitted"]
[connection signal="value_changed" from="HBox/IntEdit" to="." method="_on_int_edit_value_changed"]
[connection signal="value_changed" from="HBox/FloatEdit" to="." method="_on_float_edit_value_changed"]
[connection signal="toggled" from="HBox/BoolEdit" to="." method="_on_bool_edit_toggled"]
